# shared-library-demo

demo-LD_LIBRARY_PATH-shell/: demo.txt  foo.c
demo-install_name-DESTDIR-cmake-2.8/: CMakeLists.txt  demo.txt
demo-install_name-cmake-2.8/: demo.txt
demo-install_name-shell/: demo.txt  x.c
demo-meson/: demo.txt  meson.build  x.c
demo-meson-transitive/: bar.c  bar.h  meson.build  x.c
demo-rpath-cmake-2.8/: CMakeLists.txt  demo.txt
demo-rpath-cmake-2.8.12/: CMakeLists.txt  demo.txt  foo.c  foo.h
demo-rpath-relative-shell/: demo.txt
demo-rpath-shell/: demo.txt
